# sram_layout_review

./: .gitignore  CLAUDE.md  README.md  config_system.py  do_cleanup.py  example_batch_import.yaml  layout_review_app.py  pyproject.toml  report_generator.py  requirements-dev.txt  requirements.txt  review_engine.py  run_routing_check_tests.py  start.sh
app/: __init__.py  callbacks.py  layout.py  rc_model.py  rc_persistence.py  rc_prediction.py  rc_visualization.py  routing_config.py  routing_review.py  routing_state.py  state.py  theme.py
assets/: eda-theme.css  folder_upload.js
config/: __init__.py  pdk_loader.py  preset_loader.py  routing_thresholds.py
core/: __init__.py  data_parsing.py  directional_analyzer.py  effective_tau.py  geometry.py  golden_similarity.py  layer_style.py  matching_analyzer.py  net_identity.py  path_analysis.py  rc_calculator.py  rc_summary.py  report_visualization.py  routing_check.py  routing_metrics.py  routing_violation.py  via_coverage.py  visualization.py
pdk/: display.drf  sram_7nm.yaml  techfile  tsmcN7.layermap
report/: legacy_theme.py  pdf_legacy.py  pptx_legacy.py  routing_pptx.py
rules/: __init__.py  base_rule.py  registry.py
tests/: batch_import_example.yaml  conftest.py  run_comprehensive_tests.py  run_tests.py  shapes_test_bitline_BL0.txt  shapes_test_bitline_BLB0.txt  shapes_test_bitline_mismatch_BL0.txt  shapes_test_bitline_mismatch_BLB0.txt  shapes_test_complex_route.txt  shapes_test_drc_violation.txt  shapes_test_high_load.txt  shapes_test_long_wire.txt  shapes_test_long_wire_rc.txt  shapes_test_missing_via.txt  (+46 more)
(+39 files in other folders)
