[project]
name = "sram-layout-review"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/theme.py" = ["E501"]
"core/routing_violation.py" = ["F811"]
"tests/run_tests.py" = ["E402"]

[tool.coverage.run]
source = ["core", "rules"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_covered = true